--- a/.gitignore
+++ b/.gitignore
@@ -2,37 +2,17 @@
 ## Config
 #################
 
-.idea/
-*.iml
+*.in
+*.out
+*.ans
 
 
 #################
 ## JetBrains
 #################
 
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-
-# Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
-
-# Mongo Explorer plugin:
-.idea/mongoSettings.xml
+.idea
+*.iml
 
 ## File-based project format:
 *.iws
@@ -236,9 +216,8 @@ target/
 
 # Executables
 *.exe
-*.out
+#*.out
 *.app
-
 
 
 #################
