Homework hw_2 added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 project(ifmo_cpp)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c99")
 
 set(HOMEWORK_DIR homework)
 
@@ -9,3 +9,4 @@ set(HOMEWORK_DIR homework)
 # add_executable(ifmo_cpp ${SOURCE_FILES})
 
 add_executable(hw_1 ${HOMEWORK_DIR}/hw_1/main.c)
+add_executable(hw_2 ${HOMEWORK_DIR}/hw_2/main.c)
