--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@
 ## Config
 #################
 
+# Input stream files
 *.in
+
+# Output stream files
 *.out
+
+# Answer files
 *.ans
 
 
@@ -178,8 +183,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-#lib/
-#lib64/
+lib/
+lib64/
 parts/
 sdist/
 var/
@@ -233,7 +238,34 @@ target/
 
 
 #################
-## Exceptions
+## C++
 #################
 
-!lib/*.jar
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+#*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+#*.out
+*.app
