--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "paradigms-2016"]
 	path = paradigms-2016
 	url = https://github.com/kgeorgiy/paradigms-2016
-[submodule "intro/java-intro-2015"]
-	path = intro/java-intro-2015
+[submodule "src/intro/java-intro-2015"]
+	path = src/intro/java-intro-2015
 	url = https://github.com/kgeorgiy/java-intro-2015
