Android branch added, .gitignore updated
Former-commit-id: 4188cedc87de30864f49523d0dfab1eaf86d075f

--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,28 @@ ENV/
 .spyderproject
 .ropeproject
 
+# Android
+
+*.apk
+*.ap_
+*.dex
+*.class
+bin/
+gen/
+out/
+.gradle/
+build/
+local.properties
+proguard/
+*.log
+.navigation/
+captures/
+*.iml
+.idea/workspace.xml
+.idea/libraries
+*.jks
+.externalNativeBuild
+
 # Kotlin
 
 *.class
