--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "android/remotes/info"]
 	path = android/remotes/info
 	url = git@github.com:IFMO-Android-2016/info.git
+[submodule "android/remotes/lessons/lesson1"]
+	path = android/remotes/lessons/lesson1
+	url = git@github.com:IFMO-Android-2016/lesson1.git
