Android practice1 repository added
Former-commit-id: 3e6c3d3e40ea23167c72abba60b2b13c76eca830

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "android/remotes/lessons/lesson1"]
 	path = android/remotes/lessons/lesson1
 	url = git@github.com:IFMO-Android-2016/lesson1.git
+[submodule "android/remotes/practice/practice1"]
+	path = android/remotes/practice/practice1
+	url = git@github.com:IFMO-Android-2016/practice1.git
