Android homework1 repository added
Former-commit-id: 8e48361b604730901bbf2e24ac3eeb21402cac1c

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "android/remotes/practice/practice1"]
 	path = android/remotes/practice/practice1
 	url = git@github.com:IFMO-Android-2016/practice1.git
+[submodule "android/remotes/homework/homework1"]
+	path = android/remotes/homework/homework1
+	url = git@github.com:IFMO-Android-2016/homework1.git
