--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "android/remotes/homework/homework1"]
 	path = android/remotes/homework/homework1
 	url = git@github.com:IFMO-Android-2016/homework1.git
+[submodule "android/remotes/lessons/lesson2"]
+	path = android/remotes/lessons/lesson2
+	url = git@github.com:IFMO-Android-2016/lesson2.git
