Android lesson3 repository added
Former-commit-id: 415c1ba17101543b824d32b6ee76e75af2479ddb

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "android/remotes/lessons/lesson2"]
 	path = android/remotes/lessons/lesson2
 	url = git@github.com:IFMO-Android-2016/lesson2.git
+[submodule "android/remotes/lessons/lesson3"]
+	path = android/remotes/lessons/lesson3
+	url = git@github.com:IFMO-Android-2016/lesson3.git
