--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "android/remotes/lessons/lesson3"]
 	path = android/remotes/lessons/lesson3
 	url = git@github.com:IFMO-Android-2016/lesson3.git
+[submodule "android/remotes/lessons/lesson4"]
+	path = android/remotes/lessons/lesson4
+	url = git@github.com:IFMO-Android-2016/lesson4.git
