Android practice2 repository added
Former-commit-id: 539a5b07236f4bec6569bc5defdc9cabbeae5f55

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "android/remotes/lessons/lesson4"]
 	path = android/remotes/lessons/lesson4
 	url = git@github.com:IFMO-Android-2016/lesson4.git
+[submodule "android/remotes/practice/practice2"]
+	path = android/remotes/practice/practice2
+	url = git@github.com:IFMO-Android-2016/practice2.git
