Cpp branch restructurization
Former-commit-id: f61a24ca68a359cc4d5cfaa90362a244f762ebc9

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -8,5 +8,5 @@ set(HOMEWORK_DIR homework)
 # set(SOURCE_FILES main.cpp)
 # add_executable(ifmo_cpp ${SOURCE_FILES})
 
-add_executable(hw_1 ${HOMEWORK_DIR}/hw_1/main.c)
-add_executable(hw_2 ${HOMEWORK_DIR}/hw_2/main.c)
+add_executable(hw_1 ${HOMEWORK_DIR}/hw-1/main.c)
+add_executable(hw_2 ${HOMEWORK_DIR}/hw-2/main.c)
