--- a/cpp/homework/hw-5/CMakeLists.txt
+++ b/cpp/homework/hw-5/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.3)
-project(ifmo_cpp_format)
+project(ifmo_cpp_extra_format)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
