--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "paradigms/paradigms-2016"]
 	path = paradigms/paradigms-2016
-	url = git@github.com:kgeorgiy/paradigms-2016.git
+	url = https://github.com/kgeorgiy/paradigms-2016
 [submodule "paradigms/intro/java-intro-2015"]
 	path = paradigms/intro/java-intro-2015
-	url = git@github.com:kgeorgiy/java-intro-2015.git
+	url = https://github.com/kgeorgiy/java-intro-2015
