--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "android/remotes/lessons/lesson8"]
 	path = android/remotes/lessons/lesson8
 	url = https://github.com/IFMO-Android-2016/lesson8
+[submodule "android/remotes/homework/homework4"]
+	path = android/remotes/homework/homework4
+	url = https://github.com/IFMO-Android-2016/homework4.git
