Commit it, while it still works! NOW!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".services.RedditService"
+            android:enabled="true"
+            android:exported="false"></service>
     </application>
 
 </manifest>
