Click on notification starts an app now + app icon on the main scren, when downloaded image not available

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
 
         <service
-            android:name=".services.RedditService"
+            android:name=".services.ImageService"
             android:enabled="true"
             android:exported="false"></service>
     </application>
