Android lesson10 repository added

--- a/.gitmodules
+++ b/.gitmodules
@@ -51,7 +51,10 @@
 	url = https://github.com/IFMO-Android-2016/lesson8
 [submodule "android/remotes/homework/homework4"]
 	path = android/remotes/homework/homework4
-	url = https://github.com/IFMO-Android-2016/homework4.git
+	url = https://github.com/IFMO-Android-2016/homework4
 [submodule "android/remotes/lessons/lesson9"]
 	path = android/remotes/lessons/lesson9
-	url = https://github.com/IFMO-Android-2016/lesson9.git
+	url = https://github.com/IFMO-Android-2016/lesson9
+[submodule "android/remotes/lessons/lesson10"]
+	path = android/remotes/lessons/lesson10
+	url = https://github.com/IFMO-Android-2016/lesson10
